feat Adição de mecanicas do front e melhoras

--- a/matchup-app/src/styles/variables.scss
+++ b/matchup-app/src/styles/variables.scss
@@ -4,3 +4,11 @@ $danger-color: #FE6D73;
 $warning-color: #FFCB77;
 $success-color: #17C3B2;
 $info-color: #58a9c7;
+
+$color-1: #fff;
+$color-2: #f3f3f3;
+$color-3: #e9e9e99f;
+
+$color-input-1: #000000;
+$color-input-2: #141414;
+$color-input-3: #1d1d1d;
