--- a/matchup-app/src/components/animate-background/AnimateBackground.style.scss
+++ b/matchup-app/src/components/animate-background/AnimateBackground.style.scss
@@ -1,7 +1,15 @@
+@import '../../styles/variables.scss';
 $anim-bg-size: 160px;
 
-.animate-background {
+.background-color {
   position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background: -webkit-linear-gradient(155deg, $danger-color 0%, #FEF9EF 40%);
+  background: linear-gradient(155deg, $danger-color 10%, #FEF9EF 90%);
+}
+.animate-background{
   width: 100%;
   height: 100%;
 
