--- a/matchup-app/src/pages/login/Login.style.scss
+++ b/matchup-app/src/pages/login/Login.style.scss
@@ -1,8 +1,15 @@
+@import '../../styles/variables.scss';
 .login-card{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    background: rgba($color-1, 0.6);
+    border-radius: 16px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(5px);
+
     @media (max-width: 768px) {
         min-width: 90%;
     }
@@ -38,4 +45,18 @@
     .logo{
         margin-bottom: 0;
     }
+}
+
+.language-switcher{
+    background: rgba($color-1, 0.6);
+    border-radius: 6px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(5px);
+
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 250px;
+    height: 30px;
+    padding: 10px;
 }
