--- a/matchup-app/src/components/animate-background/AnimateBackground.style.scss
+++ b/matchup-app/src/components/animate-background/AnimateBackground.style.scss
@@ -2,17 +2,18 @@
 $anim-bg-size: 160px;
 
 .background-color {
+  width: 100%;
+  height: 100%;
+
+  background: -webkit-linear-gradient(155deg, #fef9efd3 0%, #00000000 40%);
+  background: linear-gradient(155deg, #fef9efd0 50%, #00000000 110%);
+}
+.animate-background{
   position: absolute;
   width: 100%;
   height: 100%;
 
-  background: -webkit-linear-gradient(155deg, $danger-color 0%, #FEF9EF 40%);
-  background: linear-gradient(155deg, $danger-color 10%, #FEF9EF 90%);
-}
-.animate-background{
-  width: 100%;
-  height: 100%;
-
+  background-color: #FEF9EF;
   background-image: url("../../static/heart_image.png");
   background-repeat: repeat;
   background-size: $anim-bg-size;
