--- a/matchup-app/src/components/tab-journey/tab-journey.styles.scss
+++ b/matchup-app/src/components/tab-journey/tab-journey.styles.scss
@@ -3,264 +3,297 @@
     --option-height: 10%;
     --border-radius: 10px;
     /* o resultado deve ser 100% */
-  
+
     --widht: 22%;
     --height: 90%;
-  
-  
+
+
     --widht-hover: 22.5%;
     --height-hover: 78.5%;
-  
+
     --deny-color: #00b4d8;
     --allow-color: #ff595e;
     --super-allow-color: #f9c74f;
-  
+
     --deny-color-50: rgba(0, 180, 216, 0.5);
     --allow-color-50: rgba(255, 89, 94, 0.5);
     --super-allow-color-50: rgba(249, 199, 79, 0.5);
-    
+
     --background-card: #e8e8e8;
     --background-next: #bababa;
     --background-option: #f0f0f0;
-  }
-  
-  /* 720 width screen media query */
-  @media (max-width: 990px) {
-      :root {
-          --widht: 40%;
-          --widht-hover: 40.5%;
-      }
-  }
-  
-  @media (max-width: 550px) {
-      :root {
-          --widht: 85%;
-          --widht-hover: 85.5%;
-      }
-  }
-  
-  .card-box {
+}
+
+/* 720 width screen media query */
+@media (max-width: 990px) {
+    :root {
+        --widht: 40%;
+        --widht-hover: 40.5%;
+    }
+}
+
+@media (max-width: 550px) {
+    :root {
+        --widht: 85%;
+        --widht-hover: 85.5%;
+    }
+}
+
+.card-box {
     width: 100%;
     height: 100%;
     position: relative;
     transition: all 0.3s ease-out;
-  }
-  
-  
-  .fade-deny {
-      height: 100%;
-      width: 0;
-  
-      position: absolute;
-      top: 0;
-      left: 0;
-  
-      background-image: linear-gradient(90deg, var(--deny-color) 0%, rgba(255, 255, 255, 0) 100%);
-      transition: width .5s ease-in-out;
-  }
-  
-  .fade-deny.show-this {
-      width: 20%;
-  }
-  
-  .fade-allow {
-      height: 100%;
-      width: 0;
-  
-      position: absolute;
-      top: 0;
-      right: 0;
-  
-      background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, var(--allow-color) 100%);
-      transition: width .5s ease-in-out;
-  }
-  
-  .fade-allow.show-this {
-      width: 20%;
-  }
-  
-  .fade-like {
-      height: 0;
-      width: 100%;
-  
-      position: absolute;
-      top: 0;
-      right: 0;
-  
-      background-image: linear-gradient(180deg, var(--super-allow-color) 0%, rgba(255, 255, 255, 0) 80%);
-      transition: height .5s ease-in-out;
-  }
-  
-  .fade-like.show-this {
-      height: 20%;
-  }
-  
-  .card {
-      height: var(--height);
-      width: var(--widht);
-  
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: var(--background-card);
-      border-radius: var(--border-radius) var(--border-radius) 0 0;
-      z-index: 2;
-  
-      background-position: center center;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-  
-  }
-  .draggable{
-      cursor: move;
-  }
-  .draggable::after {
-      box-shadow: inset 0px 0px 60px rgba(0, 0, 0, 0.2),
-          inset 0px 0px 60px rgba(255, 255, 255, 0.2);
+}
+
+
+.fade-deny {
+    height: 100%;
+    width: 0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-image: linear-gradient(90deg, var(--deny-color) 0%, rgba(255, 255, 255, 0) 100%);
+    transition: width .5s ease-in-out;
+}
+
+.fade-deny.show-this {
+    width: 20%;
+}
+
+.fade-allow {
+    height: 100%;
+    width: 0;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, var(--allow-color) 100%);
+    transition: width .5s ease-in-out;
+}
+
+.fade-allow.show-this {
+    width: 20%;
+}
+
+.fade-like {
+    height: 0;
+    width: 100%;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    background-image: linear-gradient(180deg, var(--super-allow-color) 0%, rgba(255, 255, 255, 0) 80%);
+    transition: height .5s ease-in-out;
+}
+
+.fade-like.show-this {
+    height: 20%;
+}
+
+.card {
+    height: var(--height);
+    width: var(--widht);
+
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--background-card);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    z-index: 2;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+}
+
+.draggable {
+    cursor: move;
+}
+
+.draggable::after {
+    box-shadow: inset 0px 0px 60px rgba(0, 0, 0, 0.2),
+        inset 0px 0px 60px rgba(255, 255, 255, 0.2);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     content: '';
     position: absolute;
-    top:0;
+    top: 0;
     z-index: 3;
     width: 100%;
     height: 100%;
     border-radius: var(--border-radius) var(--border-radius) 0 0;
-  }
-  .draggable:hover::after {
+}
+
+.draggable:hover::after {
     opacity: 1;
-  }
-  
-  
-  .draggable.left {
-      transform: translateX(-50%) rotate(-4deg) !important;
-  }
-  
-  .draggable.right {
-      transform: translateX(-50%) rotate(4deg) !important;
-  }
-  
-  .moldure {
-    width:100%;
-    height:100%;
+}
+
+
+.draggable.left {
+    transform: translateX(-50%) rotate(-4deg) !important;
+}
+
+.draggable.right {
+    transform: translateX(-50%) rotate(4deg) !important;
+}
+
+.moldure {
+    width: 100%;
+    height: 100%;
     transition: all .1s ease-in-out;
-  }
-  
-  .moldure .status {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  
-      font-size: 30px;
-      font-weight: bold;
-  
-      text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.5),
-          1px 1px 1px rgba(0, 0, 0, 0.6);
-  
-      z-index: 4;
-  
-      -webkit-user-select: none;
-      /* Safari */
-      -ms-user-select: none;
-      /* IE 10 and IE 11 */
-      user-select: none;
-      /* Standard syntax */
-  }
-  
-  .moldure.deny {
-      border: 30px solid var(--deny-color-50)
-  }
-  
-  .moldure.deny .status {
-      color: var(--deny-color);
-  }
-  
-  .moldure.allow {
-      border: 30px solid var(--allow-color-50);
-  }
-  
-  .moldure.allow .status {
-      color: var(--allow-color);
-  }
-  
-  .moldure.like {
-      border: 30px solid var(--super-allow-color-50);
-  }
-  
-  .moldure.like .status {
-      color: var(--super-allow-color);
-  }
-  
-  .meet-char .name {
-      position: absolute;
-      bottom: 0;
-      left: 5px;
-      color: #fff;
-      font-size: 1.4rem;
-      font-weight: bold;
-  
-      text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.5),
-          1px 1px 1px rgba(0, 0, 0, 0.6);
-      margin: 0;
-  
-  
-      -webkit-user-select: none;
-      /* Safari */
-      -ms-user-select: none;
-      /* IE 10 and IE 11 */
-      user-select: none;
-      /* Standard syntax */
-  }
-  
-  .next {
-      height: var(--height);
-      width: var(--widht);
-  
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgb(133, 133, 133);
-      border-radius: var(--border-radius) var(--border-radius) 0 0;
-      z-index: 1;
-  
-  
-      background-position: center center;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-  }
-  
-  .option-box {
+}
+
+.moldure .status {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    font-size: 30px;
+    font-weight: bold;
+
+    text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.5),
+        1px 1px 1px rgba(0, 0, 0, 0.6);
+
+    z-index: 4;
+
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+}
+
+.moldure.deny {
+    border: 30px solid var(--deny-color-50)
+}
+
+.moldure.deny .status {
+    color: var(--deny-color);
+}
+
+.moldure.allow {
+    border: 30px solid var(--allow-color-50);
+}
+
+.moldure.allow .status {
+    color: var(--allow-color);
+}
+
+.moldure.like {
+    border: 30px solid var(--super-allow-color-50);
+}
+
+.moldure.like .status {
+    color: var(--super-allow-color);
+}
+
+.meet-char .name {
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    color: #fff;
+    font-size: 1.4rem;
+    font-weight: bold;
+
+    text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.5),
+        1px 1px 1px rgba(0, 0, 0, 0.6);
+    margin: 0;
+
+
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+}
+
+.next {
+    height: var(--height);
+    width: var(--widht);
+
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(133, 133, 133);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    z-index: 1;
+
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.option-box {
     height: var(--option-height);
     width: var(--widht);
-  
+
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     background-color: #c5c5c555;
     border-radius: 0 0 var(--border-radius) var(--border-radius);
-  
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-  }
-  
-  .option {
+}
+
+.option {
     font-size: 24px;
     height: 40px;
     width: 40px;
     padding-top: 5px;
-  }
-  
-  .option button{
+}
+
+.option button {
     height: 100%;
     width: 100%;
-  }
-  
+}
+
+.buttonDeny,
+.buttonSuperLike,
+.buttonLike{
+    margin: 20px;
+    padding: 30px;
+    border-radius: 8px;
+    svg{
+        transform: scale(2.5);
+        &:hover{
+            opacity: 0.5;
+        }
+    }
+    
+    &:hover{
+        opacity: 0.5;
+    }
+    background-color: var(--background-card);
+}
+
+.buttonDeny{
+    color: var(--deny-color);
+}
+
+.buttonSuperLike{
+    color: var(--super-allow-color);
+}
+
+.buttonLike{
+    color: var(--allow-color);
+}
